# rust-layered-architecture

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/2021-06-09-162710_create_tasks/: up.sql
src/: domain.rs  interface.rs  main.rs  repository.rs  schema.rs  use_case.rs
src/domain/: task.rs
src/infrastructure/in_memory/: task.rs
src/infrastructure/persistence/: mod.rs  task.rs
